src/test/deca/context/invalid/Objet/sameName_field_class.des
The identifier i is already used for  a  method or a field in the same class